# REcycler

./: .gitignore  .gitmodules  README.md  analysis.py  asmutils.py  chunkutils.py  copy_with_patch.py  data.py  data_io.py  drawtable.py  i386pe.x  main.py  peutils.py  projectutils.py  requirements.txt
AsmCOutput/: __init__.py  generate.py  main.py  vex2c.py
AsmCTestProj/: AsmC-GPL.c  AsmC-common.c  AsmC-common.h  AsmC-x86-32.c  AsmC-x86-32.h  CMakeLists.txt  main.c
AsmProj/: asmproj.py  disassembly_gas.py
doc/: Heroes3-exe-layout.drawio  Heroes3-reassembly.drawio  reassembleable-disassembling.drawio
